--- a/RiotGamesApi/RiotGamesApi.csproj
+++ b/RiotGamesApi/RiotGamesApi.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.4\RiotGamesApi.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard1.4\RiotGamesApi.xml</DocumentationFile>
+    <NoWarn>40059,42024</NoWarn>
+    <WarningLevel>1</WarningLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="Library\v3\TournamentStubEndPoints\" />
   </ItemGroup>
@@ -14,5 +24,4 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
-
 </Project>
