--- a/RiotGamesApi.AspNetCore/RiotGamesApi.AspNetCore.csproj
+++ b/RiotGamesApi.AspNetCore/RiotGamesApi.AspNetCore.csproj
@@ -2,6 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <RuntimeIdentifierss>win7-x64;win10-x64;osx.10.11-x64;ubuntu.16.04-x64</RuntimeIdentifierss>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp1.1\RiotGamesApi.AspNetCore.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.xml</DocumentationFile>
+    <NoWarn>40059,42024</NoWarn>
+    <WarningLevel>1</WarningLevel>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,5 +22,4 @@
   <ItemGroup>
     <ProjectReference Include="..\RiotGamesApi\RiotGamesApi.csproj" />
   </ItemGroup>
-
 </Project>
