--- a/RiotGamesApi.AspNetCore.Web/RiotGamesApi.AspNetCore.Web.csproj
+++ b/RiotGamesApi.AspNetCore.Web/RiotGamesApi.AspNetCore.Web.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
+    <PackageReference Include="MSBuild.Microsoft.VisualStudio.Web.targets" Version="14.0.0.3" />
   </ItemGroup>
  <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
