--- a/RiotGamesApi/RiotGamesApi.csproj
+++ b/RiotGamesApi/RiotGamesApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <RuntimeIdentifierss>win7-x64;win10-x64;osx.10.11-x64;ubuntu.16.04-x64</RuntimeIdentifierss>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
