--- a/RiotGamesApi.AspNetCore.nuspec
+++ b/RiotGamesApi.AspNetCore.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
-         <id>RiotGamesApi.AspNetCore</id>
-        <version>1.0.0.0</version>
-         <title>RiotGamesApi AspNetCore Middleware</title>
+        <id>RiotGamesApi.AspNetCore</id>
+        <version>1.0.0.1</version>
+        <title>RiotGamesApi AspNetCore Middleware</title>
         <authors>Mustafa Salih ASLIM</authors>
         <owners>Mustafa Salih ASLIM</owners>
         <licenseUrl>https://github.com/msx752/RiotGamesApi/blob/master/LICENSE</licenseUrl>
@@ -12,26 +12,26 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>C# RiotGamesApi AspNetCore Middleware.</description>
         <summary>C# RiotGamesApi AspNetCore Middleware</summary>
-        <releaseNotes></releaseNotes>
+        <releaseNotes />
         <copyright>Copyright 2017</copyright>
         <language />
         <tags>RiotGames LeagueOfLegends v3 API with C# AspNetCore 1.1 project</tags>
         <dependencies>
-            <group targetFramework=".NETCoreApp1.1">               
+            <group targetFramework=".NETCoreApp1.1">
                 <dependency id="Microsoft.NETCore.App" version="1.1.2" />
                 <dependency id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.2" />
                 <dependency id="DeepCloner" version="0.10.1" />
-                <dependency id="Microsoft.Extensions.DependencyInjection" version="1.1.1" /> 
-                <dependency id="Microsoft.Extensions.Caching.Memory" version="1.1.2"  />
-                <dependency id="Newtonsoft.Json" version="10.0.3"/>
+                <dependency id="Microsoft.Extensions.DependencyInjection" version="1.1.1" />
+                <dependency id="Microsoft.Extensions.Caching.Memory" version="1.1.2" />
+                <dependency id="Newtonsoft.Json" version="10.0.3" />
                 <dependency id="RiotGamesApi" version="1.8.11.2133" />
             </group>
         </dependencies>
     </metadata>
     <files>
-    <file src="RiotGamesApi.AspNetCore\readme.txt" target="" />
-    <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.dll" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.dll" />
-    <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.xml" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.xml" />
-    <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.deps.json" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.deps.json" />
+        <file src="RiotGamesApi.AspNetCore\readme.txt" target="readme.txt" />
+        <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.deps.json" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.deps.json" />
+        <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.dll" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.dll" />
+        <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.xml" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.xml" />
     </files>
 </package>
